tidying the planner code